--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Responsive HTML5 Resume/CV Template for Developers">
-	<meta name="author" content="Xiaoying Riley at 3rd Wave Media">    
+	<meta name="description" content="Cv en ligne Dalyl Feddal">   
 	<link rel="shortcut icon" href="favicon.ico">  
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/4f6a4b08efdad6bb29f9cc801f5c07e263b39907/devicon.min.css">
