--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 					<li class="linkedin"><i class="fa fa-github"></i><a href="https://github.com/Dalyl09" target="_blank">https://github.com/Dalyl09</a></li>
 					<li class="github"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/dalyl-feddal-3a2977a2/" target="_blank">https://www.linkedin.com/in/dalyl-feddal-3a2977a2/</a></li>
 					<li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/dalyl_feddal" target="_blank">@dalyl_feddal</a></li>
+					<i class="fa fa-file-pdf-o" aria-hidden="true"></i><a href="index.html" download="dalylfeddal.pdf">cv en PDF</a>
+
 				</ul>
 			</div><!--//contact-container-->
 			<div class="education-container container-block">
